# picolibrary-microchip-megaavr0

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
ci/: analyze  format
configuration/analysis/: CMakeLists.txt
configuration/release-atmega1608/: CMakeLists.txt
configuration/release-atmega1609/: CMakeLists.txt
configuration/release-atmega3208/: CMakeLists.txt
configuration/release-atmega3209/: CMakeLists.txt
configuration/release-atmega4808/: CMakeLists.txt
configuration/release-atmega4809/: CMakeLists.txt
configuration/release-atmega808/: CMakeLists.txt
configuration/release-atmega809/: CMakeLists.txt
configuration/testing-interactive-atmega4809-arduino-nano-every/: CMakeLists.txt
docs/: asynchronous_serial.md  clock.md  device_info.md  gpio.md  i2c.md  index.md  interactive_testing_utilities.md  interrupt.md  library_version.md  multiplexed_signals.md  peripheral.md  register.md  reset.md  spi.md  test-interactive.md  usage.md  watchdog_timer.md
git/hooks/: install  pre-commit
source/: CMakeLists.txt
source/picolibrary/microchip/: megaavr0.cc
source/picolibrary/microchip/megaavr0/: asynchronous_serial.cc  clock.cc  device_info.cc  gpio.cc  i2c.cc  interrupt.cc  multiplexed_signals.cc  peripheral.cc  register.cc  reset.cc  reset_controller.cc  spi.cc  version.cc.in  watchdog_timer.cc
source/picolibrary/microchip/megaavr0/multiplexed_signals/: atmega4809.cc  spi.cc  twi.cc  usart.cc
source/picolibrary/microchip/megaavr0/multiplexed_signals/atmega4809/: spi.cc  twi.cc  usart.cc
source/picolibrary/microchip/megaavr0/peripheral/: ac.cc  adc.cc  atmega4809.cc  bod.cc  ccl.cc  clkctrl.cc  cpu.cc  cpuint.cc  crcscan.cc  evsys.cc  fuse.cc  instance.cc  nvmctrl.cc  port.cc  portmux.cc  rstctrl.cc  rtc.cc  sigrow.cc  slpctrl.cc  spi.cc  syscfg.cc  tca.cc  tcb.cc  twi.cc  usart.cc  userrow.cc  vport.cc  vref.cc  wdt.cc
source/picolibrary/testing/interactive/microchip/: megaavr0.cc
source/picolibrary/testing/interactive/microchip/megaavr0/: clock.cc  device_info.cc  fatal_error.cc  log.cc
test/: CMakeLists.txt
test/interactive/: CMakeLists.txt
test/interactive/picolibrary/asynchronous_serial/unbuffered_output_stream/hello_world/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/mcp23008/internally_pulled_up_input_pin/state/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/mcp3008/sample/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr0/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/asynchronous_serial/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/asynchronous_serial/transmitter/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/asynchronous_serial/transmitter/hello_world/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr0/asynchronous_serial/transmitter_8_n_1/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/asynchronous_serial/transmitter_8_n_1/hello_world/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr0/device_info/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/device_info/print/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr0/gpio/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/gpio/input_pin/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/gpio/input_pin/state/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr0/gpio/internally_pulled_up_input_pin/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/gpio/internally_pulled_up_input_pin/state/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr0/gpio/open_drain_io_pin/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/gpio/open_drain_io_pin/toggle/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr0/gpio/push_pull_io_pin/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/gpio/push_pull_io_pin/toggle/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr0/i2c/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/i2c/controller/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/i2c/controller/scan/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr0/spi/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/spi/controller/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/spi/controller/spi/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/spi/controller/spi/echo/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr0/spi/fixed_configuration_controller/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/spi/fixed_configuration_controller-spi/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/spi/fixed_configuration_controller-spi/echo/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr0/spi/fixed_configuration_controller-usart/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/spi/fixed_configuration_controller-usart/echo/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr0/spi/fixed_configuration_controller/spi/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/spi/fixed_configuration_controller/spi/echo/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr0/spi/variable_configuration_controller-spi/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/spi/variable_configuration_controller-spi/echo/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr0/spi/variable_configuration_controller-usart/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr0/spi/variable_configuration_controller-usart/echo/: CMakeLists.txt  main.cc
test/interactive/picolibrary/texas_instruments/tca9548a/driver/scan/: CMakeLists.txt  main.cc
(+165 files in other folders)
